tambah teks tambahan beserta warnanya

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <script src="script.js"></script>
-    <p>Halo</p>
+    <p id="teks_tambah">Selamat Menikmati</p>
 
 </body>
 </html>
